<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="alidoran.DesignPatternActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_simple_factory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_factory" />

        <Button
            android:id="@+id/btn_factory_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Factory Method" />

        <Button
            android:id="@+id/btn_singleton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singleton" />

        <Button
            android:id="@+id/btn_builder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/builder" />

        <Button
            android:id="@+id/btn_prototype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Prototype" />

        <Button
            android:id="@+id/btn_adapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adapter" />

        <Button
            android:id="@+id/btn_memento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/memento" />

        <Button
            android:id="@+id/btn_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state" />

    </LinearLayout>

</ScrollView>